<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".ui.LoginActivity">

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_background"
        android:text="@string/bt_login_text"
        android:textAllCaps="false"
        android:textColor="@color/text_white"
        android:textSize="@dimen/size_text"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:textSize="@dimen/size_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="64dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/color_text_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etUsername"
        android:textSize="@dimen/size_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="64dp"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="@color/color_text_data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <CheckBox
        android:id="@+id/cbLoginOtomatis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:text="Login Otomatis"
        android:textColor="@color/color_text_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="96dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_before_text"
            android:textColor="@color/red_main"
            android:textSize="@dimen/size_text" />

        <TextView
            android:id="@+id/toRegis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:text="Register"
            android:textAlignment="center"
            android:textColor="@color/red_main"
            android:textSize="@dimen/size_text"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>