<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    tools:context=".ui.RegisterActivity">

    <Button
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_background"
        android:text="@string/register_text"
        android:textAllCaps="false"
        android:textColor="@color/text_white"
        android:textSize="@dimen/size_text"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPasswordRegis"
        android:textSize="@dimen/size_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/color_text_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFullname"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etPasswordRegis2"
        android:textSize="@dimen/size_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="56dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:hint="Ketik ulang kata sandi"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/color_text_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPasswordRegis"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="56dp"
        android:textSize="@dimen/size_text"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="@color/color_text_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoRegister" />

    <ImageView
        android:id="@+id/logoRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="96dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:textSize="@dimen/size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sudah punya akun"
            android:textColor="@color/red_main" />

        <TextView
            android:id="@+id/toLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:text="Login"
            android:textAlignment="center"
            android:textColor="@color/red_main"
            android:textSize="@dimen/size_text"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>